# profiling-attack-dilithium

./: README.md
chipwhisperer_evaluation/: setup_chipwhisperer.sh
chipwhisperer_evaluation/machine_learning/: cw_collect_training_data.py  helpers.py  plot_traces.py  requirements.txt  train_classifier.py  unpack_send_xof.py
chipwhisperer_evaluation/machine_learning/generate_data/: .main.c.swp  Makefile  main.c  main_xof.c  poly.c  polyvec.h  rounding.c  sign.c
chipwhisperer_evaluation/unpack_xof/: Makefile  main.c  poly.c
chipwhisperer_evaluation/unpack_xof/.dep/: fips202.o.d  main.o.d  poly.o.d  polyvec.o.d  rounding.o.d  sign.o.d  simpleserial.o.d  stm32f4_hal.o.d  stm32f4_hal_lowlevel.o.d  stm32f4_sysmem.o.d  stm32f4xx_hal_rng.o.d  symmetric-shake.o.d
secret_key_retrieval/: .dockerignore  Dockerfile  run_ntl_docker.sh
secret_key_retrieval/src/: CMakeLists.txt  build.sh  data_generator.cpp  data_generator.h  execute_attack.cpp  generate_data.cpp  ilp_solver.cpp  ilp_solver.h  integer_lwe.cpp  integer_lwe.h  main.cpp  side_channel_attack.cpp  side_channel_attack.h  sign_with_s1.cpp
secret_key_retrieval/src/cmake/: Findortools.cmake
secret_key_retrieval/src/nlohmann_json/: README.md
secret_key_retrieval/src/ref/: CMakeLists.txt  dump  global_variables.c  global_variables.cpp  global_variables.h  packing.c  params.c  poly.c  poly.h  polyvec.c  sign.c
secret_key_retrieval/src/ref/test/: test_dilithium.c
